resources/webidl2/test/invalid/baseline/caller.txt
Syntax error at line 6, since `interface NumberQuadrupler`:
  legacycaller float compute(float x
               ^ Invalid operation
